Paso 14 creacion de documentacion con scribe
