# app/Http/Controllers/Api/ProductController.php
@@ -7,8 +7,16 @@ use App\Http\Resources\ProductResource;
 use App\Models\Product;
 use Illuminate\Http\Request;
 
+    /**
+     * @group Products
+     *
+     * Apis for Managing products
+     *
+     * @queryParam
+     */
 class ProductController extends Controller
 {
+
     public function index(){
         $products = Product::with('category')->paginate(9);
 
