# public/docs/openapi.yaml
@@ -7,28 +7,6 @@ servers:
   -
     url: 'http://api.test'
 paths:
-  /api/user:
-    get:
-      summary: ''
-      operationId: getApiUser
-      description: ''
-      parameters: []
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
-      tags:
-        - Endpoints
-      security: []
   /api/lists/categories:
     get:
       summary: ''
@@ -124,13 +102,12 @@ paths:
                           type: string
                           example: 'Update Category From API'
       tags:
-        - Endpoints
-      security: []
+        - Categories
   /api/categories:
     get:
-      summary: ''
-      operationId: getApiCategories
-      description: ''
+      summary: 'Get all categories'
+      operationId: getAllCategories
+      description: 'Getting the list of the categories'
       parameters: []
       responses:
         401:
@@ -146,8 +123,7 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
-      security: []
+        - Categories
     post:
       summary: ''
       operationId: postApiCategories
@@ -155,7 +131,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Categories
       requestBody:
         required: true
         content:
@@ -166,16 +142,15 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: et
+                  example: dignissimos
                   nullable: false
               required:
                 - name
-      security: []
   '/api/categories/{id}':
     get:
-      summary: ''
-      operationId: getApiCategoriesId
-      description: ''
+      summary: 'Show Category'
+      operationId: showCategory
+      description: 'Get a category by ID'
       parameters: []
       responses:
         401:
@@ -191,8 +166,7 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
-      security: []
+        - Categories
     put:
       summary: ''
       operationId: putApiCategoriesId
@@ -200,7 +174,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Categories
       requestBody:
         required: true
         content:
@@ -211,11 +185,10 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: aut
+                  example: voluptatem
                   nullable: false
               required:
                 - name
-      security: []
     delete:
       summary: ''
       operationId: deleteApiCategoriesId
@@ -223,8 +196,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
-      security: []
+        - Categories
     parameters:
       -
         in: path
@@ -234,6 +206,27 @@ paths:
         required: true
         schema:
           type: integer
+  /api/user:
+    get:
+      summary: ''
+      operationId: getApiUser
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
   /api/products:
     get:
       summary: ''
@@ -254,9 +247,23 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
-      security: []
+        - Products
 tags:
+  -
+    name: Categories
+    description: "\nApis for Managing category"
   -
     name: Endpoints
     description: ''
+  -
+    name: Products
+    description: "\nApis for Managing products"
+components:
+  securitySchemes:
+    default:
+      type: http
+      scheme: bearer
+      description: 'You can retrieve your token by visiting your dashboard and clicking <b>Generate API token</b>.'
+security:
+  -
+    default: []
